--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.animate-infinite-marquee {
+  animation: infinite-marquee 30s linear infinite;
+  will-change: transform;
+  min-width: 200%;
+}
+
+@keyframes infinite-marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
